Enforce required fields and improve template
